# ChangeLog for sys-apps/systemd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.308 2014/08/31 17:02:04 floppym Exp $

  31 Aug 2014; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
  Lower MINKV to 3.7.

  31 Aug 2014; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
  Drop firmware-loader support.

  27 Aug 2014; Agostino Sarubbo <ago@gentoo.org> systemd-215-r3.ebuild:
  Stable for ppc, wrt bug #517120

  23 Aug 2014; Michał Górny <mgorny@gentoo.org> systemd-216.ebuild,
  systemd-9999.ebuild:
  Add users & groups for systemd-journal-* daemons, bug #520662.

*systemd-216 (22 Aug 2014)

  22 Aug 2014; Michał Górny <mgorny@gentoo.org> +systemd-216.ebuild:
  Version bump.

  20 Aug 2014; Michał Górny <mgorny@gentoo.org> systemd-9999.ebuild:
  Handle IDN dependency for resolved.

  19 Aug 2014; William Hubbs <williamh@gentoo.org> systemd-212-r5.ebuild,
  systemd-215-r3.ebuild, systemd-9999.ebuild:
  Add warning about installing udev-init-scripts if you want to boot OpenRC for
  bug#520224, approved by floppym

  17 Aug 2014; Mike Gilbert <floppym@gentoo.org> systemd-212-r5.ebuild,
  systemd-215-r3.ebuild, systemd-9999.ebuild:
  Drop dependency to avoid pulling openrc into the depgraph via udev-init-
  scripts-27.

  09 Aug 2014; Mike Gilbert <floppym@gentoo.org> systemd-215-r3.ebuild,
  systemd-9999.ebuild:
  Drop fcaps for systemd-detect-virt, bug 468876.

  07 Aug 2014; Mike Gilbert <floppym@gentoo.org> systemd-215-r3.ebuild:
  Add python3.4.

  07 Aug 2014; Mike Gilbert <floppym@gentoo.org> systemd-212-r5.ebuild,
  systemd-215-r3.ebuild, systemd-9999.ebuild:
  Depend on sys-apps/dbus[systemd].

  03 Aug 2014; Markus Meier <maekke@gentoo.org> systemd-215-r3.ebuild:
  arm stable, bug #517120

  28 Jul 2014; Pacho Ramos <pacho@gentoo.org> systemd-215-r3.ebuild:
  x86 stable, bug #517120

  28 Jul 2014; Mike Gilbert <floppym@gentoo.org> metadata.xml,